# AT-STGCN

./: README.md  autsl_videos_manifest.csv  pyproject.toml  requirements.txt  run_paper_experiments.py
configs1/: asl_citizen_skeleton.yaml  autsl_skeleton.yaml
configs1/ablations/asl_citizen/: 01_base_stgcn.yaml  02_multi_source.yaml  03_adaptive_topology.yaml  ablation_plan.csv
configs1/ablations/asl_citizen_reverse/: 01_temporal_enhancement.yaml
configs1/ablations/autsl/: 01_base_stgcn.yaml  02_multi_source.yaml  03_adaptive_topology.yaml  ablation_plan.csv
configs1/ablations/autsl_reverse/: 01_temporal_enhancement.yaml
configs1/expand/asl_citizen/: 00_main_model_reference.yaml  (+5 more)
scripts/: audit_data_protocol.py  compute_h.py  create_asl_citizen_manifest.py  create_autsl_manifest.py  create_independent_module_ablations.py  draw_atstgcn_no_relation_figures.py  draw_atstgcn_paper_figures.py  evaluate.py  extract_rgb_video_keypoints.py  plot_ablation_tsne.py  predict_video.py  preprocess_skeletons.py  preprocess_videos.py  rewrite_manifest_paths.py  run_paper_experiments.py  run_repeated_seed_experiments.py  summarize_ablation_results.py  train.py  train_nature_ablation.py  train_sam27.py  verify_paper_results.py  visualize_confused_samples.py
sl_atstgcn/: at_stgcn.py  augment.py  data.py  evaluation_protocol.py  extractor.py  graph.py  keypoints.py  model.py  model_nature_ablation.py  schedule.py
tests/: test_create_autsl_manifest.py  test_create_wlasl_manifest.py  test_evaluation_protocol.py  test_extractor.py  test_graph.py  test_schedule.py
(+31 files in other folders)
